--- a/computerome.conf
+++ b/computerome.conf
@@ -10,9 +10,8 @@ backend {
             config {
                 runtime-attributes = """
                 String walltime = "08:00:00"
-                Int nodes = 1
                 Int cpu = 1
-                Int memory_gb = 8
+                Int memory = 8
                 """
 
                 submit = """
@@ -23,7 +22,7 @@ backend {
                 -d ${cwd} \
                 -m e \
                 -l walltime=${walltime} \
-                -l nodes=${nodes}:ppn=${cpu},pmem=${memory_gb}gb \
+                -l nodes=1:ppn=${cpu},pmem=${memory}gb \
                 ${script}
                 """
 
@@ -33,4 +32,25 @@ backend {
             }
         }
     }
+}
+
+system {
+  abort-jobs-on-terminate = true
+}
+
+config {
+  filesystems {
+    local {
+      caching {
+        # When copying a cached result, what type of file duplication should occur. Attempted in the order listed below:
+        duplication-strategy: [
+          "soft-link", "hard-link", "copy"
+        ]
+      }
+    }
+  }
+}
+
+call-caching {
+    enabled = false
 }
