--- a/computerome.conf
+++ b/computerome.conf
@@ -11,7 +11,7 @@ backend {
                 runtime-attributes = """
                 String walltime = "08:00:00"
                 Int cpu = 1
-                Int memory = 8
+                Int memory_gb = 8
                 """
 
                 submit = """
@@ -22,7 +22,7 @@ backend {
                 -d ${cwd} \
                 -m e \
                 -l walltime=${walltime} \
-                -l nodes=1:ppn=${cpu},pmem=${memory}gb \
+                -l nodes=1:ppn=${cpu},pmem=${memory_gb}gb \
                 ${script}
                 """
 
