--- a/computerome.conf
+++ b/computerome.conf
@@ -11,18 +11,14 @@ backend {
                 runtime-attributes = """
                 String walltime = "08:00:00"
                 Int cpu = 1
-                Int memory_gb = 8
+                Int memory = 8
                 """
 
                 submit = """
                 qsub \
-                -e ${err} \
-                -o ${out} \
-                -N ${job_name} \
-                -d ${cwd} \
                 -m e \
                 -l walltime=${walltime} \
-                -l nodes=1:ppn=${cpu},pmem=${memory_gb}gb \
+                -l nodes=1:ppn=${cpu},pmem=${memory}gb \
                 ${script}
                 """
 
