--- a/computerome.conf
+++ b/computerome.conf
@@ -37,6 +37,9 @@ system {
 config {
   filesystems {
     local {
+        localization: [
+            "soft-link", "copy", "hard-link"
+            ]
       caching {
         # When copying a cached result, what type of file duplication should occur. Attempted in the order listed below:
         duplication-strategy: [
