Further conf changes

--- a/computerome.conf
+++ b/computerome.conf
@@ -17,6 +17,9 @@ backend {
                 submit = """
                 qsub \
                 -m e \
+                -e ${err} \
+                -o ${out} \
+                -N ${job_name} \
                 -l walltime=${walltime} \
                 -l nodes=1:ppn=${cpu},pmem=${memory}gb \
                 ${script}
@@ -25,6 +28,20 @@ backend {
                 job-id-regex = "(\\d+).*"
                 kill = "qdel ${job_id}"
                 check-alive = "qstat ${job_id}"
+
+                filesystems {
+                  local {
+                      localization: [
+                          "soft-link", "hard-link", "copy"
+                          ]
+                    caching {
+                      # When copying a cached result, what type of file duplication should occur. Attempted in the order listed below:
+                      duplication-strategy: [
+                        "soft-link", "hard-link", "copy"
+                      ]
+                    }
+                  }
+                }
             }
         }
     }
@@ -32,22 +49,6 @@ backend {
 
 system {
   abort-jobs-on-terminate = true
-}
-
-config {
-  filesystems {
-    local {
-        localization: [
-            "soft-link", "copy", "hard-link"
-            ]
-      caching {
-        # When copying a cached result, what type of file duplication should occur. Attempted in the order listed below:
-        duplication-strategy: [
-          "soft-link", "hard-link", "copy"
-        ]
-      }
-    }
-  }
 }
 
 call-caching {
